[gd_scene load_steps=3 format=3 uid="uid://clq6dcox4urlb"]

[ext_resource type="Script" uid="uid://7ysfxj4t1lfm" path="res://mainmenu.gd" id="1_cmhrf"]
[ext_resource type="Texture2D" uid="uid://de6pwk11ooh0u" path="res://snowdin.jpg" id="2_d2nv2"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cmhrf")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(560.00006, 400.00003)
scale = Vector2(2.310056, 2.310056)
texture = ExtResource("2_d2nv2")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -182.5
offset_top = -120.5
offset_right = 182.5
offset_bottom = 120.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 64
text = "Payload"
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="SettingsButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"
